[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Spritesheet/sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/fire-ship.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy_dead.tres" type="AudioStream" id=3]
[ext_resource path="res://resources/laser_no_loop.tres" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 420.404, 808.667, 97.9797, 92.1735 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.4185, 45.6147 )

[sub_resource type="CircleShape2D" id=3]
radius = 470.0

[node name="FireShip" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="FireTimer" type="Timer" parent="."]

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( -90, 0 )
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
